test/syc/bad/declfunvar.c
/*
 * 'foo' is already declared as a different type of symbol.
 * (declare as function, then as variable)
 */

void foo(void);
int foo = 1;
